# session-sentinel

./: CHANGELOG.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
commands/: off.md  on.md  status.md  toggle.md  watcher.md
demo/: make_cast.py  powernap.cast
hooks/: hooks.json
launchd/: com.claude-powernap.watcher.plist.template  com.session-sentinel.watcher.plist.template
powernap/: fallback_watch.py  powernap_common.py  usage_check.py
scripts/: ci_estimate_sanity_test.py  ci_liveness_test.py  ci_lock_test.py  ci_rescue_test.py  hooks_config.py
sentinel/: config.default.json  fallback_watch.py  sentinel_common.py  usage_check.py
src/claude_powernap/: __init__.py  cli.py  fallback_watch.py  hooks_config.py  powernap_common.py  usage_check.py
src/claude_powernap/assets/: claude-powernap.service  config.default.json
systemd/: claude-powernap.timer  session-sentinel.service  session-sentinel.timer
